# VectorGraphRenderer

./: .gitignore  CMakeLists.txt  README.md
example/: matrix.txt
src/: arrangement.cc  arrangement.h  camera.cc  camera.h  divide_conquer_construct.cc  divide_conquer_construct.h  main.cc  mesh.cc  mesh.h  plane_param.cc  plane_param.h  postprocess.cc  postprocess.h  split_data.cc  split_data.h  types.h
